--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
   grid-template-areas: 
   "header header"
   "nav con";
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  gap: 1px;
+  grid-template-columns: 1fr 10fr;
 }
 
-
+.app-wrapper-content {
+  grid-area: con;
+  background-color: cadetblue;
+}
 
 
 
